<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_fav_white"
        android:title="@string/favorite"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings"
        app:showAsAction="collapseActionView|always" />
</menu>