<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.DetailUserActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />


            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:maxWidth="100dp"
                android:maxLines="1"
                android:padding="1dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/avatar_photo"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="@+id/avatar_photo"
                app:layout_constraintTop_toBottomOf="@+id/avatar_photo"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:maxWidth="120dp"
                android:maxLines="1"
                android:padding="1dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_name"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                tools:text="@string/username" />

            <TextView
                android:id="@+id/tv_followerSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="center"
                android:maxLines="1"
                android:padding="1dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/followers"
                app:layout_constraintEnd_toEndOf="@+id/followers"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="@+id/followers"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.846"
                tools:text="@string/jumlah" />

            <TextView
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="32dp"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:maxLines="1"
                android:padding="1dp"
                android:text="@string/follower"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/avatar_photo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_followingSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="center"
                android:maxLines="1"
                android:padding="1dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/following"
                app:layout_constraintEnd_toEndOf="@+id/following"
                app:layout_constraintStart_toStartOf="@+id/following"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.842"
                tools:text="@string/jumlah" />

            <TextView
                android:id="@+id/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="32dp"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:maxLines="1"
                android:padding="1dp"
                android:text="@string/following"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/followers"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_username"
                app:tabGravity="fill"
                app:tabMode="fixed" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/favorite"
                app:elevation="4dp"
                app:fabCustomSize="56dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:maxImageSize="32dp"
                app:srcCompat="@drawable/ic_favorite_border" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>